syntax = "proto3";

package clientbase;
option go_package = "./";

service clientbase{
  rpc Add(AddClientRequest) returns (AddClientResponse) {}
  rpc Delete(DeleteClientRequest) returns (DeleteClientResponse) {}
  rpc GetClients(GetClientsRequest) returns (GetClientsResponse) {}
  rpc GetClientsFromRedis(GetClientsRequest) returns (GetClientsResponse) {}
}

message Client {
  string name = 1;
}

message AddClientRequest {
  Client client = 1;
}

message AddClientResponse {
}

message DeleteClientRequest {
  Client client = 1;
}

message DeleteClientResponse {
}

message GetClientsRequest{

}

message GetClientsResponse {
  repeated Client clients = 1;
}